--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
+import java.rmi.activation.ActivationGroup_Stub
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
         jcenter()
         google()
+        maven()
+                {
+                    url "https://maven.google.com"
+                }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -17,6 +23,10 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven()
+                {
+                    url "https://maven.google.com"
+                }
     }
 }
 
