--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
