--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'com.github.andyxialm:ColorDialog:fc1804b35a'
 }
