--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
                 {
                     url "https://maven.google.com"
                 }
+        maven {
+            url "https://jitpack.io"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
@@ -27,6 +30,9 @@ allprojects {
                 {
                     url "https://maven.google.com"
                 }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
